--- a/index.css
+++ b/index.css
@@ -43,17 +43,20 @@ pre {
 .flex {
   display: flex;
   justify-content: space-between;
-  gap: 40px;
+  gap: 20px;
+  margin-left: 12%;
 }
 
 .form {
-    padding-left: 80px;
+  width: 800px;
+  padding: 20px 0px;
 }
 
 #fluxo-processo {
   text-align: center;
   background-color: white;
   margin: 0px !important;
+  width: 40%;
   padding: 20px;
   border-left: 1px solid #dfdfdf;
 }
@@ -80,7 +83,6 @@ li span {
     width: 20px;
     height: 20px;
     background-color: rgb(15, 173, 86);
-    /* border: solid 2px rgb(15, 173, 86); */
     color: white;
     border-radius: 50%;
     text-align: center;
