--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@ body {
   background-color: #f5f5f5;
   margin: 0;
 }
+ul li {
+  list-style-type: none;
+}
 .container {
   max-width: 800px;
   margin: auto;
@@ -74,14 +77,17 @@ pre {
   padding-top: 20px;
 }
 
+
 #lista-processos li {
   text-align: left;
-  font-weight: bold;}
+  font-weight: bold;
+}
 
 li span {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
+    padding: 3px;
     background-color: rgb(15, 173, 86);
     color: white;
     border-radius: 50%;
@@ -95,8 +101,8 @@ li span::after {
     position: absolute;
     top: calc(100% + 3px);
     left: 50%;
-    width: 2px;
-    height: 20px;
+    width: 3px;
+    height: 16px;
     background-color: rgb(15, 173, 86);
     transform: translateX(-50%);
 }
@@ -132,4 +138,24 @@ li span::after {
 
 .bloco-explicacao p {
   margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+    margin: 0px 20px;
+    justify-content: center; 
+  }
+
+  .form {
+    width: auto;
+  }
+
+  #fluxo-processo {
+    display: none;
+  }
+
+  li span::after {
+    display: none;
+  }
 }
