refactor: scroll to top

--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@ ul li {
     width: 100%;
     padding: 20px;
     border-bottom: 1px solid #dfdfdf;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 #header h1 {
     text-align: left;
@@ -77,12 +80,30 @@ pre {
   padding-top: 20px;
 }
 
+#lista-processos-mobile {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  padding-top: 40px;
+  display: none;
+}
+
+#lista-processos-mobile li {
+  font-weight: bold;
+}
 
 #lista-processos li {
   text-align: left;
   font-weight: bold;
 }
-
+.circle-logo {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  padding: 3px;
+  background-color: rgb(15, 173, 86);
+  border-radius: 50%;
+}
 li span {
     display: inline-block;
     width: 25px;
@@ -143,12 +164,16 @@ li span::after {
 @media (max-width: 768px) {
   .flex {
     flex-direction: column;
-    margin: 0px 20px;
-    justify-content: center; 
+    margin: 0px;
+    /* padding: 0px 20px;  */
+    justify-content: center;
+    align-items: start;
   }
 
   .form {
     width: auto;
+    margin: 0px;
+    padding: 0px;
   }
 
   #fluxo-processo {
@@ -157,5 +182,9 @@ li span::after {
 
   li span::after {
     display: none;
+  }
+
+  #lista-processos-mobile {
+    display: block;
   }
 }
