--- a/styles/index.css
+++ b/styles/index.css
@@ -100,6 +100,14 @@ pre {
 #lista-processos li span {
   margin-right: 10px;
 }
+.menu-button {
+  background-color: transparent;
+  border: none;
+}
+.menu-button:hover {
+  cursor: pointer;
+  color: rgb(15, 173, 86);
+}
 .circle-logo {
   display: inline-block;
   width: 12px;
